añadidos estilos nav y home

--- a/index.html
+++ b/index.html
@@ -1,10 +1,101 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>tattos I like</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Anton|Didact+Gothic" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/theme.css">
+    <link rel="stylesheet" href="assets/css/header.css">
+    <link rel="stylesheet" href="assets/css/home.css">
+    <link rel="stylesheet" href="assets/css/descriptions.css">
+    <link rel="stylesheet" href="assets/css/video.css">
+    <link rel="stylesheet" href="assets/css/form.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
+
+    <title>animation and videogame studios I love</title>
   </head>
+
   <body>
+
+    <header>
+      <nav>
+        <li class="nav-li-item"> <a href="#" class="nav-link nav-link-home">HOME</a> </li>
+        <li class="nav-li-item"> <a href="#" class="nav-link">ILM</a> </li>
+        <li class="nav-li-item"> <a href="#" class="nav-link">RHYTHM AND HUES</a> </li>
+        <li class="nav-li-item"> <a href="#" class="nav-link">KOJIMA STUDIO</a> </li>
+        <li class="nav-li-item"> <a href="#" class="nav-link">NAUGTHY DOG</a> </li>
+        <li class="nav-li-item"> <a href="#" class="nav-link">BLIZZARD</a> </li>
+      </nav>
+    </header>
+
+    <section class="home-container">
+      <div class="home-title">
+        <h1>animation and videogame studios I love</h1>
+      </div>
+    </section>
+
+    <section class="descriptions-container">
+      <section class="ilm-container">
+        <img src="" alt="" class="ilm-img">
+        <p class="ilm-paragraph">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </section>
+      <section class="rh-container">
+        <img src="" alt="" class="rh-img">
+        <p class="rh-paragraph">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </section>
+      <section class="kojima-container">
+        <img src="" alt="" class="kojima-img">
+        <p class="kojima-paragraph">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </section>
+      <section class="nd-container">
+        <img src="" alt="" class="nd-img">
+        <p class="nd-paragraph">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </section>
+      <section class="blizzard-container">
+        <img src="" alt="" class="blizzard-img">
+        <p class="blizzard-paragraph">
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+      </section>
+    </section>
+
+    <section class="video-container">
+      <video src="videofile.ogg" autoplay poster="posterimage.jpg">
+
+      </video>
+    </section>
+
+    <section class="form-container">
+
+    </section>
+
+    <footer>
+      <span>
+        © magentaFire
+      </span>
+    </footer>
 
   </body>
 </html>
