--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/form.css">
     <link rel="stylesheet" href="assets/css/footer.css">
 
-    <title>animation and videogame studios I love</title>
+    <title>vfx and videogame studios I love</title>
   </head>
 
   <body>
@@ -29,54 +29,63 @@
 
     <section class="home-container">
       <div class="home-title">
-        <h1>animation and videogame studios I love</h1>
+        <h1>vfx and videogame studios I love</h1>
       </div>
     </section>
 
     <section class="descriptions-container">
       <section class="ilm-container">
-        <img src="" alt="" class="ilm-img">
+        <img src="assets/img/ilm-logo.png" class="ilm-img">
         <p class="ilm-paragraph">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Industrial Light & Magic (ILM) es una empresa dedicada a producir efectos visuales y gráficos generados por ordenador
+          para películas. Fue fundada por George Lucas en mayo de 1975, pasando a ser propiedad de Lucasfilm Ltd. Lucas creó la
+          empresa cuando cerró el departamento de efectos especiales de la 20th Century Fox, justo después de haber obtenido luz
+          verde para la producción de Star Wars. El estudio fue originalmente establecido en Van Nuys, California y posteriormente
+          trasladado a San Rafael. Actualmente está establecido en el Letterman Digital Arts Center, sito en el Presidio de San
+          Francisco en California. ILM continúa usando parte del edificio de San Rafael (construido en 1991 específicamente para
+          la ILM) para su tienda de modelos.
         </p>
       </section>
       <section class="rh-container">
-        <img src="" alt="" class="rh-img">
+        <img src="assets/img/rh-logo.jpg" class="rh-img">
         <p class="rh-paragraph">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Rhythm & Hues Studios es una empresa estadounidense de efectos visuales y animación que recibió el Óscar a los mejores
+          efectos visuales en 1995 por Babe, en 2008 por La brújula dorada y en 2013 por La vida de Pi. También ha recibido cuatro
+          Óscars Científicos y Técnicos.
         </p>
       </section>
       <section class="kojima-container">
-        <img src="" alt="" class="kojima-img">
+        <img src="assets/img/kojima-logo.jpg" class="kojima-img">
         <p class="kojima-paragraph">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Kojima Productions (小島プロダクション Kojima Purodakushon?) es un estudio desarrollador de videojuegos japonés bajo
+          la dirección del diseñador Hideo Kojima. La compañía fue una filial de Konami, y su sede se ubica en Roppongi Hills,
+          Roppongi, Tokio.1 El estudio tenía poco menos de 100 empleados en 2005, pero desde entonces ha crecido a más de 200
+          personas para el desarrollo de Metal Gear Solid 4: Guns of the Patriots.2 3 El logo de la empresa es la insignia
+          de la «Unidad FOX» de Metal Gear Solid 3: Snake Eater.
+          <br>
+          Actualmente este estudio ya no pertenece a Konami sino que ha pasado a ser un estudio independiente cuyo primer
+          juego como este tipo de estudio será exclusivo para Playstation 4
         </p>
       </section>
       <section class="nd-container">
-        <img src="" alt="" class="nd-img">
+        <img src="assets/img/nd-logo.jpg" class="nd-img">
         <p class="nd-paragraph">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Naughty Dog es una empresa desarrolladora de videojuegos estadounidense fundada por Andy Gavin y Jason Rubin en 1984,
+          conocida principalmente por ser la creadora de exitosas sagas, como Crash Bandicoot, para PlayStation, Jak and Daxter,
+          para PlayStation 2 y Uncharted, para PlayStation 3, así como el juego The Last of Us. Con sede en Santa Mónica,
+          California, la empresa fue comprada por Sony Computer Entertainment en 2001.
         </p>
       </section>
       <section class="blizzard-container">
-        <img src="" alt="" class="blizzard-img">
+        <img src="assets/img/Blizzard-logo.png" class="blizzard-img">
         <p class="blizzard-paragraph">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-          Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Blizzard Entertainment, Inc. es una empresa desarrolladora y distribuidora de videojuegos estadounidense con sede en Irvine,
+          California y fundada el 1 de junio de 1994. Conocida y fundada originalmente como Silicon & Synapse en 1991, la empresa
+          comenzó realizando portabilidades de juegos para otros estudios antes de desarrollar sus propios videojuegos en 1993,
+          entre los que destacaron Rock N' Roll Racing y The Lost Vikings. En 1994 la compañía se renombró Blizzard Entertainment, Inc.,
+          su nombre actual, y poco después lanzó su primer gran éxito comercial, Warcraft: Orcs & Humans. Desde entonces, Blizzard
+          ha logrado cosechar un gran éxito con las sagas Warcraft, Diablo y StarCraft, así como el MMORPG World of Warcraft,
+          convirtiéndose en un referente de los géneros de estrategia en tiempo real3 y MMORPG.
         </p>
       </section>
     </section>
