--- a/index.html
+++ b/index.html
@@ -91,13 +91,16 @@
     </section>
 
     <section class="video-container">
-      <video src="videofile.ogg" autoplay poster="posterimage.jpg">
 
-      </video>
     </section>
 
     <section class="form-container">
-
+      <form class="" action="index.html" method="post" class="form-tag">
+        <input type="text" name="" value="" class="form-item">
+        <input type="text" name="" value="" class="form-item">
+        <textarea name="name" rows="8" cols="80"></textarea class="form-item">
+        <button type="button" name="button">send</button class="form-item">
+      </form>
     </section>
 
     <footer>
