solo falta video y media queries

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <input type="text" name="" value="" class="form-item">
         <input type="text" name="" value="" class="form-item">
         <textarea name="name" rows="8" cols="80"></textarea class="form-item">
-        <button type="button" name="button">send</button class="form-item">
+        <button type="button" name="button"  class="form-item">send</button>
       </form>
     </section>
 
